--- a/star-wars-app/src/style.css
+++ b/star-wars-app/src/style.css
@@ -1,11 +1,39 @@
-.background {
+.starfield-bg {
     background-color: black;
     color: rgb(220, 189, 17);
-    height: 100vh;
+    height: 100%;
 }
 
 .starfield {
     position: absolute;
-    height: 100%;
     width: 100%;
+    height: 100vh;
+    background-size: cover;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.item-card {
+    background-color: black;
+    border-color: white;
+    padding: 5%;
+    text-align: center;
+}
+
+.title{
+    text-align: center;
+    margin-bottom: 5%;
+    margin-top: 3%;
+}
+
+.loading {
+    height: 85vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
