--- a/star-wars-app/src/style.css
+++ b/star-wars-app/src/style.css
@@ -1,3 +1,7 @@
+:root {
+    --bs-body-bg: #000;
+}
+
 .starfield-bg {
     background-color: black;
     color: rgb(220, 189, 17);
@@ -24,6 +28,14 @@
     text-align: center;
 }
 
+.details-card {
+    background-color: black;
+    border-color: white;
+    padding: 5%;
+    text-align: center;
+    margin: 5%;
+}
+
 .title{
     text-align: center;
     margin-bottom: 5%;
@@ -31,9 +43,17 @@
 }
 
 .loading {
-    height: 85vh;
+    height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.test {
+  position:absolute;
+  top:0px;
+  right:0px;
+  bottom:0px;
+  left:0px;
 }
