--- a/star-wars-app/src/style.css
+++ b/star-wars-app/src/style.css
@@ -58,6 +58,7 @@
     text-align: center;
     margin-bottom: 5%;
     margin-top: 3%;
+    font-weight: bold;
 }
 
 .loading {
@@ -66,6 +67,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.container-2 {
+    margin-bottom: 4%;
 }
 
 .test {
